# pip-installable-command

./: README.md  pyproject.toml
test_cli/: __main__.py  test_module.py
test_package/: __main__.py
