[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pip installable command"
version = "1.0"
description = "A minimal demo of a pip installable command line utility"
authors = ["Jeff Robertson <jeff@ion8.net>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
test-cli = "test_package.test_module:main"
